--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,6 +1,8 @@
 pull_request_rules:
   - name: Assign yourself and request reviews automatically
     conditions:
+      - -merged
+      - -closed
       - base=main
     actions:
       assign:
@@ -18,6 +20,8 @@ pull_request_rules:
 
   - name: Automatic merge on approval
     conditions:
+      - -closed
+      - -merged
       - "#approved-reviews-by>=3"
       - "#changes-requested-reviews-by=0"
       - base=main
