--- a/.github/workflows/auto-update-reviewers.yml
+++ b/.github/workflows/auto-update-reviewers.yml
@@ -18,6 +18,9 @@ jobs:
             python-version: '3.x'
             architecture: 'x64'
       
+      - name: Current directory
+        run: pwd
+      
       - name: Install Packages
         run: |
           python -m pip install --upgrade pip
