--- a/.github/workflows/auto-update-reviewers.yml
+++ b/.github/workflows/auto-update-reviewers.yml
@@ -30,14 +30,10 @@ jobs:
         run: |
           python .scripts/change_reviewer.py
 
-      - name: Git Commit
+      - name: Git Commit and Push
         run: |
           git config --local user.email "coodingpenguin@gmail.com"
           git config --local user.name "CoodingPenguin"
           git add .
           git commit -m "Update this week reviewer list"
-      
-      - name: Git Push
-        uses: ad-m/github-push-action@master
-        with:
-           branch: 'main'
+          git push
