--- a/.mergify.yml
+++ b/.mergify.yml
@@ -14,6 +14,7 @@ pull_request_rules:
       - -closed
       - -merged
       - "#approved-reviews-by>=2"
+      - "#review-requested=0"
       - "#changes-requested-reviews-by=0"
       - base=main
     actions:
